================================================================================
Changes since v11.09a
================================================================================

--------------------------------------------------------------------------------
global 

   -- internal variables in several functions changed from 'int' to 'std::streamoff' type


--------------------------------------------------------------------------------
basic: 

   osg package
      -- (64 bit) updated to OpenSceneGraph-3.0.1

   Nav class
      1) Correction for crossing 180 meridian

   NetHandler.h
      1) (64 bit) toNetOrder(long) and toNetOrder(unsigned long) now check the sizeof 'long'

   Rand class
      1) (64 bit) changed all 'long' type variables to 'int' type

   Rnd class
      1) (64 bit) changed all 'long' type variables to 'int' type

--------------------------------------------------------------------------------
gui-glut:



--------------------------------------------------------------------------------
otw:

   geoTypes.h
      1) (64 bit) changed uint_4 and int_4 from the "long int" to "int"


--------------------------------------------------------------------------------

simulation: 
 
   Player class
      1) setSlotInitLat() and setSlotInitLon() -- changed local variable from LCreal to double

   TabLogger class
      1) makePlayerLatLonMsg() -- now prints the latitude and/or longitude regardless
         of their values.

--------------------------------------------------------------------------------

terrain: 

   SrtmHgtFile class
      1) determineSrtmInfo() -- second argument is now takes a std::streamoff type